# medical-tests

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  settings.py
app/schemas/: patient.py  pdf.py
app/src/models/: models.py
app/src/services/db/: base.py  dao.py
app/src/services/patient/: dao.py  exceptions.py  patient.py  pdf.py
migrations/: env.py
migrations/versions/: 5c5db1a1cb40_create_tables.py
static/: style.css
static/js/: patients.js
templates/: index.html
